// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
     totalling 
    $1.12
    .
  </h1>
</div>
`;

exports[`should render the ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    21
     expense
    s
     totalling 
    $113,344,556.62
    .
  </h1>
</div>
`;
